--- a/css/styles.css
+++ b/css/styles.css
@@ -173,11 +173,11 @@ section {
     box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.1);
     background-color: var(--modal-color);
     /*max-width: 100%;*/
-    width: calc(100vw - 80px);
+    width: calc(100vw - 100px);
     height: 265px;
     padding: 0 15px;
     position: absolute;
-    right: -55px;
+    right: -85px;
     /*left: calc(50% - 162px);*/
     top: 3%;
     z-index: 10;
@@ -335,7 +335,7 @@ body {
 
 #header-1 {
     grid-row: 1 / 2;
-    grid-column: 1 / -1;
+    grid-column: 1 / 3;
 }
 
 .icons-wrapper {
@@ -384,7 +384,7 @@ ul {
     margin-left: 20px;
     font-size: 36px;
     position: relative;
-    top: 9px;
+    top: 7px;
     font-weight: 900;
 }
 
@@ -462,7 +462,6 @@ article:last-child {
 }
 .content-1 a button {
     font-weight: 700;
-    
     margin-bottom: 100px;
 }
 .content-1 h1 {
@@ -501,7 +500,7 @@ button {
     width: 245px;
     height: 56px;
     background-color: transparent;
-    border: 1px solid var(--emphasis);
+    border: 2px solid var(--emphasis);
     border-radius: 39.5px;
     box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.1);
     padding: 0.2em 15px 0 15px;
@@ -519,8 +518,7 @@ button:hover {
     color: var(--white-color);
     grid-row: 2 / 3;
     display: grid;
-    grid-template-rows: 1fr 96px;
-    padding-top: 65px;
+    grid-template-rows: 1fr;
 }
 
 #footer-2 {
@@ -551,6 +549,7 @@ footer ul {
 .copyright {
     padding-left: 119px;
     padding-right: 119px;
+    margin-bottom: 20px;
 }
 
 .contact-info img {
@@ -561,7 +560,7 @@ footer ul {
 .contact-info {
     display: flex;
     justify-content: space-between;
-    margin: 44px auto;
+    margin: 10px auto;
     flex-shrink: 1;
 
 }
