--- a/css/responsive-styles.css
+++ b/css/responsive-styles.css
@@ -30,18 +30,21 @@
     }
 
     .logo img {
-        width: 28px;
-        height: 28px;
+        width: 100%;
+        max-width: 300px;
     }
-    .logo .header_text {
-        position: relative;
-        font-size: 20px;
-        top: 3px;
-        margin-left: 10px;
-    }
+    
 
     ul.social.icons {
+        justify-content: flex-start;
+    }
+    .socialRegular {
         display: none;
+    }
+    .socialSmall {
+        display: block;
+        padding-top: 20px;
+        padding-left: 40px;
     }
     .modal-container {
         display: block;
@@ -99,19 +102,26 @@
         padding-bottom: 30px;
     }
     .logo img {
-        width: 28px;
-        height: 28px;
+        width: 100%;
+        max-width: 240px;
     }
-    .logo .header_text {
-        font-size: 20px;
-        line-height: 36px;
-        position: relative;
-        top: 2px;
-        margin-left: 10px;
-    }
+
+
     .social.icons img {
-        width: 24px;
-        height: 24px;
+        width: 35px;
+        height: 35px;
+    }
+    ul.social.icons {
+        justify-content: flex-start;
+        
+    }
+    .socialRegular {
+        display: none;
+    }
+    .socialSmall {
+        display: block;
+        padding-top: 20px;
+        padding-left: 10px;
     }
     #footer-1 {
         padding-top: 0;
