--- a/css/responsive-styles.css
+++ b/css/responsive-styles.css
@@ -46,6 +46,11 @@
         padding-top: 20px;
         padding-left: 40px;
     }
+
+    .social.icons img {
+        width: 35px;
+        height: 35px;
+    }
     .modal-container {
         display: block;
         right: -30px !important;
