better line height on content on imprint page

--- a/css/styles.css
+++ b/css/styles.css
@@ -444,6 +444,10 @@ article {
     flex-wrap: wrap;
 }
 
+article span {
+    line-height: 1.8;
+}
+
 article:last-child {
     margin-bottom: 68px;
 }
